--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClInclude Include="SubBranchDeselect.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="OverlappedConfirmVisitor.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Branch.cpp">
@@ -228,6 +231,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="SubBranchDeselect.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="OverlappedConfirmVisitor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
