--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -162,6 +162,12 @@
     <ClInclude Include="TextFont.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TextFormWidthSizeAction.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TextFormHeightSizeAction.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Branch.cpp">
@@ -303,6 +309,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TextFont.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TextFormWidthSizeAction.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TextFormHeightSizeAction.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
