--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -168,6 +168,9 @@
     <ClInclude Include="TextFormHeightSizeAction.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TextSelectDelete.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Branch.cpp">
