텍스트 선택 삭제

--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="TextFormHeightSizeAction.cpp" />
     <ClCompile Include="TextFormSize.cpp" />
     <ClCompile Include="TextFormWidthSizeAction.cpp" />
+    <ClCompile Include="TextSelectDelete.cpp" />
     <ClCompile Include="TextVisitor.cpp" />
     <ClCompile Include="Topic.cpp" />
     <ClCompile Include="WriteEnglish.cpp" />
