스크롤 이동
값변경 기능 미구현

--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -164,10 +164,27 @@
     <ClInclude Include="MouseAction.h" />
     <ClInclude Include="MouseStrategy.h" />
     <ClInclude Include="MultiSelect.h" />
+    <ClInclude Include="OnHScrollLeft.h" />
+    <ClInclude Include="OnHScrollLineLeft.h" />
+    <ClInclude Include="OnHScrollLineRight.h" />
+    <ClInclude Include="OnHScrollPageLeft.h" />
+    <ClInclude Include="OnHScrollPageRight.h" />
+    <ClInclude Include="OnHScrollRight.h" />
+    <ClInclude Include="OnHThumb.h" />
+    <ClInclude Include="OnVScrollDown.h" />
+    <ClInclude Include="OnVScrollLineDown.h" />
+    <ClInclude Include="OnVScrollLineUp.h" />
+    <ClInclude Include="OnVScrollPageDown.h" />
+    <ClInclude Include="OnVScrollPageUp.h" />
+    <ClInclude Include="OnVScrollUp.h" />
+    <ClInclude Include="OnVThumb.h" />
     <ClInclude Include="OverlappedConfirmVisitor.h" />
     <ClInclude Include="Page.h" />
     <ClInclude Include="PageApp.h" />
     <ClInclude Include="PageForm.h" />
+    <ClInclude Include="Scroll.h" />
+    <ClInclude Include="ScrollingVisitor.h" />
+    <ClInclude Include="ScrollMove.h" />
     <ClInclude Include="Select.h" />
     <ClInclude Include="Selection.h" />
     <ClInclude Include="SelectionMarkVisitor.h" />
@@ -203,10 +220,27 @@
     <ClCompile Include="MouseAction.cpp" />
     <ClCompile Include="MouseStrategy.cpp" />
     <ClCompile Include="MultiSelect.cpp" />
+    <ClCompile Include="OnHScrollLeft.cpp" />
+    <ClCompile Include="OnHScrollLineLeft.cpp" />
+    <ClCompile Include="OnHScrollLineRight.cpp" />
+    <ClCompile Include="OnHScrollPageLeft.cpp" />
+    <ClCompile Include="OnHScrollPageRight.cpp" />
+    <ClCompile Include="OnHScrollRight.cpp" />
+    <ClCompile Include="OnHThumb.cpp" />
+    <ClCompile Include="OnVScrollDown.cpp" />
+    <ClCompile Include="OnVScrollLineDown.cpp" />
+    <ClCompile Include="OnVScrollLineUp.cpp" />
+    <ClCompile Include="OnVScrollPageDown.cpp" />
+    <ClCompile Include="OnVScrollPageUp.cpp" />
+    <ClCompile Include="OnVScrollUp.cpp" />
+    <ClCompile Include="OnVThumb.cpp" />
     <ClCompile Include="OverlappedConfirmVisitor.cpp" />
     <ClCompile Include="Page.cpp" />
     <ClCompile Include="PageApp.cpp" />
     <ClCompile Include="PageForm.cpp" />
+    <ClCompile Include="Scroll.cpp" />
+    <ClCompile Include="ScrollingVisitor.cpp" />
+    <ClCompile Include="ScrollMove.cpp" />
     <ClCompile Include="Select.cpp" />
     <ClCompile Include="Selection.cpp" />
     <ClCompile Include="SelectionMarkVIsitor.cpp" />
