Shape에 Set 연산 추가

--- a/Mindmap/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap/Mindmap.vcxproj
@@ -43,6 +43,7 @@
     <ClCompile Include="..\MarkStrategy.cpp" />
     <ClCompile Include="..\MouseAction.cpp" />
     <ClCompile Include="..\MouseStrategy.cpp" />
+    <ClCompile Include="..\MoveVisitor.cpp" />
     <ClCompile Include="..\MultiLineDragAction.cpp" />
     <ClCompile Include="..\MultiSelect.cpp" />
     <ClCompile Include="..\OverlappedConfirmVisitor.cpp" />
@@ -104,6 +105,7 @@
     <ClInclude Include="..\MarkStrategy.h" />
     <ClInclude Include="..\MouseAction.h" />
     <ClInclude Include="..\MouseStrategy.h" />
+    <ClInclude Include="..\MoveVisitor.h" />
     <ClInclude Include="..\MultiLineDragAction.h" />
     <ClInclude Include="..\MultiSelect.h" />
     <ClInclude Include="..\OverlappedConfirmVisitor.h" />
