--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -157,7 +157,7 @@
     <ClInclude Include="HitTestVisitor.h" />
     <ClInclude Include="Iterator.h" />
     <ClInclude Include="KeyAction.h" />
-    <ClInclude Include="KeyBoard.h" />
+    <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="BranchTraverser.h" />
     <ClInclude Include="BranchIterator.h" />
@@ -201,7 +201,7 @@
     <ClCompile Include="HitTestVisitor.cpp" />
     <ClCompile Include="Iterator.cpp" />
     <ClCompile Include="KeyAction.cpp" />
-    <ClCompile Include="KeyBoard.cpp" />
+    <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="Mark.cpp" />
     <ClCompile Include="MarkHitTest.cpp" />
