--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -129,13 +129,13 @@
     <ClInclude Include="DeleteVisitor.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="KeyBoard.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="KeyAction.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="DeleteKey.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Keyboard.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -251,13 +251,13 @@
     <ClCompile Include="DeleteVisitor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="KeyBoard.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="KeyAction.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="DeleteKey.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Keyboard.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
