--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -105,7 +105,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -143,6 +143,7 @@
   <ItemGroup>
     <ClInclude Include="Array.h" />
     <ClInclude Include="Branch.h" />
+    <ClInclude Include="BranchArrange.h" />
     <ClInclude Include="Clipboard.h" />
     <ClInclude Include="Composite.h" />
     <ClInclude Include="DeleteKey.h" />
@@ -185,6 +186,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Branch.cpp" />
+    <ClCompile Include="BranchArrange.cpp" />
     <ClCompile Include="BranchIterator.cpp" />
     <ClCompile Include="BranchTraverser.cpp" />
     <ClCompile Include="Clipboard.cpp" />
