--- a/Mindmap/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap/Mindmap.vcxproj
@@ -19,65 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Branch.cpp" />
-    <ClCompile Include="..\BranchIterator.cpp" />
-    <ClCompile Include="..\BranchTraverser.cpp" />
-    <ClCompile Include="..\Caret.cpp" />
-    <ClCompile Include="..\Character.cpp" />
-    <ClCompile Include="..\Clipboard.cpp" />
-    <ClCompile Include="..\Composite.cpp" />
-    <ClCompile Include="..\DoubleByteCharacter.cpp" />
-    <ClCompile Include="..\DoubleLineDragAction.cpp" />
-    <ClCompile Include="..\DrawingStrategy.cpp" />
-    <ClCompile Include="..\DrawingVisitor.cpp" />
-    <ClCompile Include="..\DrawLines.cpp" />
-    <ClCompile Include="..\DrawMarks.cpp" />
-    <ClCompile Include="..\DrawTopics.cpp" />
-    <ClCompile Include="..\FoldVisitor.cpp" />
-    <ClCompile Include="..\HitTester.cpp" />
-    <ClCompile Include="..\HitTestVisitor.cpp" />
-    <ClCompile Include="..\Iterator.cpp" />
-    <ClCompile Include="..\Line.cpp" />
-    <ClCompile Include="..\Mark.cpp" />
-    <ClCompile Include="..\MarkHitTest.cpp" />
-    <ClCompile Include="..\MarkStrategy.cpp" />
-    <ClCompile Include="..\MouseAction.cpp" />
-    <ClCompile Include="..\MouseStrategy.cpp" />
-    <ClCompile Include="..\MultiLineDragAction.cpp" />
-    <ClCompile Include="..\MultiSelect.cpp" />
-    <ClCompile Include="..\OverlappedConfirmVisitor.cpp" />
-    <ClCompile Include="..\Page.cpp" />
-    <ClCompile Include="..\PageApp.cpp" />
-    <ClCompile Include="..\PageForm.cpp" />
-    <ClCompile Include="..\Row.cpp" />
-    <ClCompile Include="..\Select.cpp" />
-    <ClCompile Include="..\Selection.cpp" />
-    <ClCompile Include="..\SelectionMarkVIsitor.cpp" />
-    <ClCompile Include="..\SelectionStrategy.cpp" />
-    <ClCompile Include="..\SelectText.cpp" />
-    <ClCompile Include="..\Shape.cpp" />
-    <ClCompile Include="..\ShapeVisitor.cpp" />
-    <ClCompile Include="..\SingleByteCharacter.cpp" />
-    <ClCompile Include="..\SingleLineDragAction.cpp" />
-    <ClCompile Include="..\SingleSelect.cpp" />
-    <ClCompile Include="..\SubBranchDeselect.cpp" />
-    <ClCompile Include="..\Text.cpp" />
-    <ClCompile Include="..\TextComposite.cpp" />
-    <ClCompile Include="..\TextDoubleClick.cpp" />
-    <ClCompile Include="..\TextDoubleClickSelectAction.cpp" />
-    <ClCompile Include="..\TextDrag.cpp" />
-    <ClCompile Include="..\TextFont.cpp" />
-    <ClCompile Include="..\TextForm.cpp" />
-    <ClCompile Include="..\TextFormSize.cpp" />
-    <ClCompile Include="..\TextVisitor.cpp" />
-    <ClCompile Include="..\Topic.cpp" />
-    <ClCompile Include="..\TopicHitTest.cpp" />
-    <ClCompile Include="..\UnFoldVisitor.cpp" />
-    <ClCompile Include="..\WriteEnglish.cpp" />
-    <ClCompile Include="..\WriteKorean.cpp" />
-    <ClCompile Include="..\WriteVisitor.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="..\Array.h" />
     <ClInclude Include="..\Branch.h" />
     <ClInclude Include="..\BranchIterator.h" />
@@ -86,6 +27,7 @@
     <ClInclude Include="..\Character.h" />
     <ClInclude Include="..\Clipboard.h" />
     <ClInclude Include="..\Composite.h" />
+    <ClInclude Include="..\DeleteVisitor.h" />
     <ClInclude Include="..\DoubleByteCharacter.h" />
     <ClInclude Include="..\DoubleLineDragAction.h" />
     <ClInclude Include="..\DrawingMouse.h" />
@@ -106,11 +48,30 @@
     <ClInclude Include="..\MouseStrategy.h" />
     <ClInclude Include="..\MultiLineDragAction.h" />
     <ClInclude Include="..\MultiSelect.h" />
+    <ClInclude Include="..\OnHScrollLeft.h" />
+    <ClInclude Include="..\OnHScrollLineLeft.h" />
+    <ClInclude Include="..\OnHScrollLineRight.h" />
+    <ClInclude Include="..\OnHScrollPageLeft.h" />
+    <ClInclude Include="..\OnHScrollPageRight.h" />
+    <ClInclude Include="..\OnHScrollRight.h" />
+    <ClInclude Include="..\OnHThumb.h" />
+    <ClInclude Include="..\OnMouseWheel.h" />
+    <ClInclude Include="..\OnMouseWheelDown.h" />
+    <ClInclude Include="..\OnMouseWheelUp.h" />
+    <ClInclude Include="..\OnVScrollDown.h" />
+    <ClInclude Include="..\OnVScrollLineDown.h" />
+    <ClInclude Include="..\OnVScrollLineUp.h" />
+    <ClInclude Include="..\OnVScrollPageDown.h" />
+    <ClInclude Include="..\OnVScrollPageUp.h" />
+    <ClInclude Include="..\OnVScrollUp.h" />
+    <ClInclude Include="..\OnVThumb.h" />
     <ClInclude Include="..\OverlappedConfirmVisitor.h" />
     <ClInclude Include="..\Page.h" />
     <ClInclude Include="..\PageApp.h" />
     <ClInclude Include="..\PageForm.h" />
     <ClInclude Include="..\Row.h" />
+    <ClInclude Include="..\ScrollAction.h" />
+    <ClInclude Include="..\ScrollStrategy.h" />
     <ClInclude Include="..\Select.h" />
     <ClInclude Include="..\Selection.h" />
     <ClInclude Include="..\SelectionMarkVisitor.h" />
@@ -137,6 +98,85 @@
     <ClInclude Include="..\WriteEnglish.h" />
     <ClInclude Include="..\WriteKorean.h" />
     <ClInclude Include="..\WriteVisitor.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\Branch.cpp" />
+    <ClCompile Include="..\BranchIterator.cpp" />
+    <ClCompile Include="..\BranchTraverser.cpp" />
+    <ClCompile Include="..\Caret.cpp" />
+    <ClCompile Include="..\Character.cpp" />
+    <ClCompile Include="..\Clipboard.cpp" />
+    <ClCompile Include="..\Composite.cpp" />
+    <ClCompile Include="..\DeleteVisitor.cpp" />
+    <ClCompile Include="..\DoubleByteCharacter.cpp" />
+    <ClCompile Include="..\DoubleLineDragAction.cpp" />
+    <ClCompile Include="..\DrawingStrategy.cpp" />
+    <ClCompile Include="..\DrawingVisitor.cpp" />
+    <ClCompile Include="..\DrawLines.cpp" />
+    <ClCompile Include="..\DrawMarks.cpp" />
+    <ClCompile Include="..\DrawTopics.cpp" />
+    <ClCompile Include="..\FoldVisitor.cpp" />
+    <ClCompile Include="..\HitTester.cpp" />
+    <ClCompile Include="..\HitTestVisitor.cpp" />
+    <ClCompile Include="..\Iterator.cpp" />
+    <ClCompile Include="..\Line.cpp" />
+    <ClCompile Include="..\Mark.cpp" />
+    <ClCompile Include="..\MarkHitTest.cpp" />
+    <ClCompile Include="..\MarkStrategy.cpp" />
+    <ClCompile Include="..\MouseAction.cpp" />
+    <ClCompile Include="..\MouseStrategy.cpp" />
+    <ClCompile Include="..\MultiLineDragAction.cpp" />
+    <ClCompile Include="..\MultiSelect.cpp" />
+    <ClCompile Include="..\OnHScrollLeft.cpp" />
+    <ClCompile Include="..\OnHScrollLineLeft.cpp" />
+    <ClCompile Include="..\OnHScrollLineRight.cpp" />
+    <ClCompile Include="..\OnHScrollPageLeft.cpp" />
+    <ClCompile Include="..\OnHScrollPageRight.cpp" />
+    <ClCompile Include="..\OnHScrollRight.cpp" />
+    <ClCompile Include="..\OnHThumb.cpp" />
+    <ClCompile Include="..\OnMouseWheel.cpp" />
+    <ClCompile Include="..\OnMouseWheelDown.cpp" />
+    <ClCompile Include="..\OnMouseWheelUp.cpp" />
+    <ClCompile Include="..\OnVScrollDown.cpp" />
+    <ClCompile Include="..\OnVScrollLineDown.cpp" />
+    <ClCompile Include="..\OnVScrollLineUp.cpp" />
+    <ClCompile Include="..\OnVScrollPageDown.cpp" />
+    <ClCompile Include="..\OnVScrollPageUp.cpp" />
+    <ClCompile Include="..\OnVScrollUp.cpp" />
+    <ClCompile Include="..\OnVThumb.cpp" />
+    <ClCompile Include="..\OverlappedConfirmVisitor.cpp" />
+    <ClCompile Include="..\Page.cpp" />
+    <ClCompile Include="..\PageApp.cpp" />
+    <ClCompile Include="..\PageForm.cpp" />
+    <ClCompile Include="..\Row.cpp" />
+    <ClCompile Include="..\ScrollAction.cpp" />
+    <ClCompile Include="..\ScrollStrategy.cpp" />
+    <ClCompile Include="..\Select.cpp" />
+    <ClCompile Include="..\Selection.cpp" />
+    <ClCompile Include="..\SelectionMarkVIsitor.cpp" />
+    <ClCompile Include="..\SelectionStrategy.cpp" />
+    <ClCompile Include="..\SelectText.cpp" />
+    <ClCompile Include="..\Shape.cpp" />
+    <ClCompile Include="..\ShapeVisitor.cpp" />
+    <ClCompile Include="..\SingleByteCharacter.cpp" />
+    <ClCompile Include="..\SingleLineDragAction.cpp" />
+    <ClCompile Include="..\SingleSelect.cpp" />
+    <ClCompile Include="..\SubBranchDeselect.cpp" />
+    <ClCompile Include="..\Text.cpp" />
+    <ClCompile Include="..\TextComposite.cpp" />
+    <ClCompile Include="..\TextDoubleClick.cpp" />
+    <ClCompile Include="..\TextDoubleClickSelectAction.cpp" />
+    <ClCompile Include="..\TextDrag.cpp" />
+    <ClCompile Include="..\TextFont.cpp" />
+    <ClCompile Include="..\TextForm.cpp" />
+    <ClCompile Include="..\TextFormSize.cpp" />
+    <ClCompile Include="..\TextVisitor.cpp" />
+    <ClCompile Include="..\Topic.cpp" />
+    <ClCompile Include="..\TopicHitTest.cpp" />
+    <ClCompile Include="..\UnFoldVisitor.cpp" />
+    <ClCompile Include="..\WriteEnglish.cpp" />
+    <ClCompile Include="..\WriteKorean.cpp" />
+    <ClCompile Include="..\WriteVisitor.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
