--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClInclude Include="TextCopy.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="WordWrap.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Branch.cpp">
@@ -333,6 +336,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TextCopy.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="WordWrap.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
