--- a/Mindmap/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap/Mindmap.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="..\Character.h" />
     <ClInclude Include="..\Clipboard.h" />
     <ClInclude Include="..\Composite.h" />
+    <ClInclude Include="..\DeleteKey.h" />
     <ClInclude Include="..\DeleteVisitor.h" />
     <ClInclude Include="..\DoubleByteCharacter.h" />
     <ClInclude Include="..\DoubleLineDragAction.h" />
@@ -40,6 +41,8 @@
     <ClInclude Include="..\HitTester.h" />
     <ClInclude Include="..\HitTestVisitor.h" />
     <ClInclude Include="..\Iterator.h" />
+    <ClInclude Include="..\KeyAction.h" />
+    <ClInclude Include="..\KeyBoard.h" />
     <ClInclude Include="..\Line.h" />
     <ClInclude Include="..\Mark.h" />
     <ClInclude Include="..\MarkHitTest.h" />
@@ -98,6 +101,8 @@
     <ClInclude Include="..\WriteEnglish.h" />
     <ClInclude Include="..\WriteKorean.h" />
     <ClInclude Include="..\WriteVisitor.h" />
+    <ClInclude Include="CopyKey.h" />
+    <ClInclude Include="PasteKey.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Branch.cpp" />
@@ -107,6 +112,7 @@
     <ClCompile Include="..\Character.cpp" />
     <ClCompile Include="..\Clipboard.cpp" />
     <ClCompile Include="..\Composite.cpp" />
+    <ClCompile Include="..\DeleteKey.cpp" />
     <ClCompile Include="..\DeleteVisitor.cpp" />
     <ClCompile Include="..\DoubleByteCharacter.cpp" />
     <ClCompile Include="..\DoubleLineDragAction.cpp" />
@@ -119,6 +125,8 @@
     <ClCompile Include="..\HitTester.cpp" />
     <ClCompile Include="..\HitTestVisitor.cpp" />
     <ClCompile Include="..\Iterator.cpp" />
+    <ClCompile Include="..\KeyAction.cpp" />
+    <ClCompile Include="..\KeyBoard.cpp" />
     <ClCompile Include="..\Line.cpp" />
     <ClCompile Include="..\Mark.cpp" />
     <ClCompile Include="..\MarkHitTest.cpp" />
@@ -177,6 +185,8 @@
     <ClCompile Include="..\WriteEnglish.cpp" />
     <ClCompile Include="..\WriteKorean.cpp" />
     <ClCompile Include="..\WriteVisitor.cpp" />
+    <ClCompile Include="CopyKey.cpp" />
+    <ClCompile Include="PasteKey.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
