--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClInclude Include="WordWrap.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TextPaste.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Branch.cpp">
@@ -339,6 +342,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="WordWrap.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TextPaste.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
